# antique

./: .dockerignore  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  README.ru.md  README.zh.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat
docs/: AGENT-TESTING.md  COMPETITOR-FEATURE-MATRIX.md  FEATURE-PLAN.md  MANUAL-TEST-PLAN.md  OWNER-FULL-TEST-CHECKLIST.md  RELEASE-0.4.0-REPORT.md  RELEASE-0.6.0-REPORT.md  RELEASE-0.7.0-REPORT.md  RELEASE-0.8.0-REPORT.md  RELEASE-0.9.0-REPORT.md
docs/design/: AGENT-INSTRUCTIONS.md  ASSET-SPEC.md  BRAND.md  PROMPTS.md
src/: __init__.py  cli.py  consoleutil.py
src/api/: __init__.py  routes.py  server.py
src/core/: __init__.py  automation.py  backup_import.py  backup_scheduler.py  browser.py  cdp.py  chain.py  cookie.py  detect.py  engines.py  extension.py  fingerprint.py  fingerprint_ops.py  geo.py  operations.py  portable.py  profile.py  providers.py  proxy.py  proxy_pool.py  socks_bridge.py  storage.py  sync.py
src/mcp/: __init__.py  __main__.py  server.py
src/ui/: __init__.py  dashboard.py
src/ui/templates/: index.html
tests/: test_api_endpoints.py  test_auth.py  test_automation.py  test_backup_import.py  test_bulk_and_proxy.py  test_chain.py  test_console.py  test_cookie.py  test_detect.py  test_engines.py  test_extensions_engine_mcp.py  test_fingerprint.py  test_geo.py  test_import_launch_and_randomize.py  test_operations_release.py  test_portable.py  test_profile.py  test_profile_import.py  test_proxy.py  test_proxy_pool.py  test_sort_clone_features.py  test_status_liveview.py  test_storage.py  test_sync.py  test_ui_release_040.py  test_webgpu_fonts.py
