[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "antique"
version = "0.3.0"
description = "Local open-source alternative to AdsPower: multi-profile anti-detect browser with fingerprint spoofing, proxy management, cookie import/export, and an AdsPower-compatible local API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "antique contributors" }]

[project.scripts]
antique = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short -p no:web3 -p no:pytest_ethereum"